# DragonLog

./: .gitignore  ADIF_COMPATIBILITY.md  AVAILABLE_CONTESTS.md  BUILD_INSTRUCTIONS.md  DragonLog.py  DragonLog_MainWindow.ui  DragonLog_QSOForm.py  DragonLog_QSOForm.ui  DragonLog_Settings.py  DragonLog_Settings.ui  DragonLog_de.ts  LICENCE.txt  MANIFEST.in  Makefile  README.md  README_HAMCC.md  README_WININST.md  SHORTCUTS.md  adx314.xsd  adx314generic.xsd  bands.json  build.bat  build.sh  build_deb.sh  geo_dist.py  main.py  make.bat  modes.json  pyproject.toml  qt_designer.bat  qt_designer.sh  qt_linguist.bat  qt_linguist.sh  release.bat  release.sh  requirements.txt  setup.py  setup_msi.py
data/: bands.json  cb_channels.json  color_map.json
doc/: DE_00_HANDBUCH.md  DE_10_INSTALL.md  DE_10_INSTALLATION.md  DE_20_ERSTER_START.md  DE_60_CASSIOPEIACONSOLE.md  DE_80_TASTENKUERZEL.md  DE_90_SETUP_HAMLIB.md  EN_00_MANUAL.md  EN_100_DXSPOTS_CTY.md  EN_10_INSTALL.md  EN_110_ELECTRONIC_QSL.md  EN_20_FIRST_START.md  EN_30_ADD_EDIT_QSOS.md  EN_50_EXPORT_IMPORT.md  EN_60_CASSIOPEIACONSOLE.md  EN_70_CONTESTS.md  EN_80_SHORTCUTS.md  EN_90_SETUP_HAMLIB.md  HELP.md  HELP_DE.md  HELP_EN.md
doc/images/: DE_Linux_Settings-CAT.xcf  DE_Toolbar.xcf
dragonlog/: CallBook.py  CassiopeiaConsole.py  ColorPalettes.py  ContestDlg.py  ContestStatistics.py  DragonLog.py  DragonLog_AppSelect.py  DragonLog_CallBook.py  DragonLog_LoTW.py  DragonLog_QSOForm.py  DragonLog_RegEx.py  DragonLog_Settings.py  DragonLog_Statistics.py  DragonLog_eQSL.py  DxSpots.py  ListEdit.py  LoTW.py  Logger.py  QSLQRReader.py  RegEx.py  RigControl.py  SelectWidget.py  __init__.py  __main__.py  adi2contest.py  cty.py  distance.py  eQSL.py  local_callbook.py
dragonlog/contest/: __init__.py  __main__.py  base.py  contests_darc.py  contests_darc_others.py  contests_darc_rlp.py  contests_others.py
dragonlog/data/: Logvorlage_V1_FM_K32.xlsx  bands.json  cb_channels.json  color_map.json  modes.json
dragonlog/icons/: callbook_icons.xcf  contest.xcf  help.xcf  icons8-qrcode-96.xcf  (+3 more)
i18n/: DragonLog_de.ts  DragonLog_en.ts  DragonLog_templ.ts  Makefile  ascii_replace_de.json  qt_linguist.bat  qt_linguist.sh
icons/: edit_addmulti.xcf  icons8-dragon-96.xcf
src/: DragonLog.py  DragonLog_QSOForm.py  DragonLog_Settings.py
tools/: bands.csv  build_bands.py  build_cb_channels.py  build_modes.py  cb_channels.csv  flag_map.py  gen_big_adi.py  modes.csv
ui_files/: CassiopeiaConsole.ui  ContestDlg.ui  ContestStatistics.ui  DragonLog_AppSelect.ui  DragonLog_MainWindow.ui  DragonLog_QSOForm.ui  DragonLog_Settings.ui  DxSpots.ui  ListEdit.ui  Makefile  QSLQRReader.ui  SelectWidget.ui  qt_designer.bat  qt_designer.sh
(+7 files in other folders)
