[project]
name = "DragonLog"
dynamic = ["version"]
authors = [
  { name="Andreas Schawo, DF1ASC", email="andreas@schawo.de" },
]
description = "Log QSO for Ham radio"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyQt6", "maidenhead", "PyADIF-File~=1.3", "keyring", "requests", "xmltodict", "HamCC~=1.0", "numpy", "matplotlib", "packaging"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Ham Radio",
]

[project.optional-dependencies]
xlformat=["openpyxl"]
qslqrcode=["opencv-python-headless", "pyzbar"]

[project.urls]
"Homepage" = "https://github.com/gitandy/DragonLog?tab=readme-ov-file#dragonlog"
"Bug Tracker" = "https://github.com/gitandy/DragonLog/issues"

[project.scripts]
"DragonLog" = "dragonlog.DragonLog:main"

[project.gui-scripts]
"DragonLogW" = "dragonlog.DragonLog:main"

[tool.setuptools]
packages = ["dragonlog", "dragonlog.contest"]

[tool.setuptools.package-data]
dragonlog = ["data/**", "icons/**", "contest/data/**"]

[tool.setuptools.dynamic]
version = {attr = "dragonlog.__version__.__version__"}
